# virgola

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: virgola.desktop
resources/: style.css  virgola.gresource.xml
src/: csv_handler.rs  main.rs  state.rs
src/ui/: dialogs.rs  mod.rs  sidebar.rs  table.rs  toolbar.rs
