[package]
name = "Virgola"
version = "0.1.0"
edition = "2024"
description = "A GTK4 CSV file viewer and editor"
license = "GPL-3.0-or-later"
authors = ["Matte23"]

[dependencies]
glib = "0.21.5"
gio = "0.21.5"
csv = "1.3"
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_8"] }
gtk = { version = "0.11.1", package = "gtk4", features = ["v4_12"] }

[build-dependencies]
glib-build-tools = "0.21"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/Virgola", dest = "/usr/bin/virgola", mode = "755" },
  { source = "assets/virgola.desktop", dest = "/usr/share/applications/virgola.desktop", mode = "644" },
]

[package.metadata.generate-rpm.requires]
gtk4 = "*"
